charts/kyverno-policies/tests/expected/service-labeled-implicit-targetport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    anteroom.radiustech.xyz/original-ports: '[{"name":"http","port":8080}]'
  labels:
    anteroom.radiustech.xyz/proxied: enabled
  name: implicit
  namespace: hello
spec:
  ports:
  - name: http
    port: 8080
    targetPort: anteroom
  selector:
    app: implicit
