charts/kyverno-policies/tests/expected/service-labeled-no-record.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    anteroom.radiustech.xyz/proxied: enabled
  name: hello-app
  namespace: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: anteroom
  selector:
    app: hello-app
