charts/kyverno-policies/tests/expected/service-labeled.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    anteroom.radiustech.xyz/original-ports: '[{"name":"http","port":80,"targetPort":"http"}]'
  labels:
    anteroom.radiustech.xyz/proxied: enabled
  name: hello-app
  namespace: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: anteroom
  selector:
    app: hello-app
