charts/kyverno-policies/tests/expected/service-restored.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: hello-app
  namespace: hello
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: hello-app
